--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-YOUR_ADSENSE_ID"
+    <script async src="https://pagead.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7218983773373982"
      crossorigin="anonymous"></script>
 </head>
 <body>
@@ -27,10 +27,9 @@
     <div class="ad-container">
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-             data-ad-slot="YOUR_AD_SLOT_ID"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-ad-format="horizontal"
+             data-ad-client="ca-pub-7218983773373982"
+             data-ad-slot="6543210987"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
@@ -49,6 +48,17 @@
             </select>
         </div>
 
+        <div class="ad-container ad-sidebar">
+            <ins class="adsbygoogle"
+                 style="display:block"
+                 data-ad-format="rectangle"
+                 data-ad-client="ca-pub-7218983773373982"
+                 data-ad-slot="7654321098"></ins>
+            <script>
+                 (adsbygoogle = window.adsbygoogle || []).push({});
+            </script>
+        </div>
+
         <div class="movies-grid">
             <!-- سيتم إضافة الأفلام هنا -->
         </div>
@@ -56,9 +66,9 @@
         <div class="ad-container">
             <ins class="adsbygoogle"
                  style="display:block"
-                 data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-                 data-ad-slot="YOUR_AD_SLOT_ID"
                  data-ad-format="auto"
+                 data-ad-client="ca-pub-7218983773373982"
+                 data-ad-slot="8765432109"
                  data-full-width-responsive="true"></ins>
             <script>
                  (adsbygoogle = window.adsbygoogle || []).push({});
@@ -69,10 +79,9 @@
     <div class="ad-container">
         <ins class="adsbygoogle"
              style="display:block"
-             data-ad-client="ca-pub-YOUR_ADSENSE_ID"
-             data-ad-slot="YOUR_AD_SLOT_ID"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
+             data-ad-format="horizontal"
+             data-ad-client="ca-pub-7218983773373982"
+             data-ad-slot="9876543210"></ins>
         <script>
              (adsbygoogle = window.adsbygoogle || []).push({});
         </script>
